force-app/main/default/objects/Staff__c/fields/is_manager__c.field-meta.xml
<CustomField>
    <fullName>is_manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is manager</label>
    <type>Checkbox</type>
</CustomField>