force-app/main/default/objects/Staff__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Staff</relationshipLabel>
    <relationshipName>Staff</relationshipName>
    <type>Lookup</type>
</CustomField>