force-app/main/default/objects/Staff__c/fields/Shift_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Shift_Constraints__c</fullName>
    <label>Shift Constraints</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1_1</fullName>
            </value>
            <value>
                <fullName>1_2</fullName>
            </value>
            <value>
                <fullName>1_3</fullName>
            </value>
            <value>
                <fullName>1_4</fullName>
            </value>
            <value>
                <fullName>2_1</fullName>
            </value>
            <value>
                <fullName>2_2</fullName>
            </value>
            <value>
                <fullName>2_3</fullName>
            </value>
            <value>
                <fullName>2_4</fullName>
            </value>
            <value>
                <fullName>3_1</fullName>
            </value>
            <value>
                <fullName>3_2</fullName>
            </value>
            <value>
                <fullName>3_3</fullName>
            </value>
            <value>
                <fullName>3_4</fullName>
            </value>
            <value>
                <fullName>4_1</fullName>
            </value>
            <value>
                <fullName>4_2</fullName>
            </value>
            <value>
                <fullName>4_3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>