force-app/main/default/objects/Staff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Manager__c</columns>
    <columns>Function__c</columns>
    <columns>Cloud__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Available__c</columns>
    <columns>is_manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>